--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,7 @@ h1 {
     font-size: 4em;
     font-weight: 900;
     text-shadow: 0.02em 0.04em #403D58;
-    color: #FC7753;
+    color: hsl(105, 81%, 53%);
 }
 
 h2 {
